- Fix chopped-off playback with pulseaudio output: draining the output now on closing.
- SDL output fixup, a) not chopping off end and b) non-fatal underrun
- Fix obvious errors in win32 output ... does it now play the end of tracks? Need someone to test this.
- added support for screen and iris-ansi terminals with --title (as prompted by patch from sf.net user canavan)

1.15.4
---
- Fix stupid bug in mpg123_chomp_string() (introduced in 1.15.1), empty lines were badly treated. Only usage in mpg123 is for parsing HTTP redirect headers; malicious HTTP servers might exploit that (possibility to zero bytes in memory).
- some cleanup for nagging mode
- more resync strictness to really catch (all) cases with changing decoder structure; in practice badly needed when disabling seekbuffer (so it's your fault, somehow ...) for non-seekable streams, otherwise not really an issue because of readahead checking
  I repeat: This fixes possibly fatal behaviour in the parser when readahead checking is explicitly disabled (p.ex. via mpg123 --no-seekbuffer on http streams). By default, readahead checking is _always_ active!

1.15.3
---
- Fix WAV writing. AGAIN. People love to decode WAV to stdout in various ways that started to get broken with me starting to care for people who like to write to full disks. I frikkin' HATE this rat race! I'm even starting to SHOUT. Now, the code prefers to write no header at all (when there is no actual output) instead of possibly writing too many misleading ones. Getting the blame for breaking dir2ogg repeatedly while trying to cope with one fatal situation that you cannot really cope with sucks. Big time. I hope that's it now!

1.15.2
---
- build fix with older shells (== in configure)

1.15.1
---
- libmpg123 API version 37
- Fix corner case in HTTP communication with missing path in Location header (bug 187).
- Prevent nasty alignment issues by not guessing about assembler alignment when .balign is available (bug 188).

1.15.0
---